[gd_scene load_steps=7 format=3 uid="uid://c56mccohk50rn"]

[ext_resource type="Script" path="res://turret.gd" id="1_assxp"]
[ext_resource type="Texture2D" uid="uid://djxkg7lkxxnd4" path="res://icon.svg" id="1_ypbff"]
[ext_resource type="PackedScene" uid="uid://bc2k706ic5tm1" path="res://bullet_emitter.tscn" id="3_osj5b"]
[ext_resource type="PackedScene" uid="uid://bn3b4dd01ppa3" path="res://turret_bullet.tscn" id="4_1cmve"]

[sub_resource type="CircleShape2D" id="CircleShape2D_umj1w"]
radius = 300.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ab3j"]

[node name="Turret" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_assxp")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_umj1w")

[node name="Base" type="Sprite2D" parent="."]
self_modulate = Color(0.470946, 0.333761, 0.17451, 1)
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_ypbff")

[node name="Cannon" type="Sprite2D" parent="."]
self_modulate = Color(0.470946, 0.333761, 0.17451, 1)
scale = Vector2(0.18, 0.015)
texture = ExtResource("1_ypbff")
offset = Vector2(65, 0)

[node name="BulletEmitter" parent="Cannon" instance=ExtResource("3_osj5b")]
position = Vector2(138.889, 0)
BulletScene = ExtResource("4_1cmve")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6ab3j")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.33

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
